--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>seh-nya – Bun + React + Tailwind</title>
+    <title>Sehnya's Portfolio</title>
     <!-- Served by the Bun server as /static/* -> static/dist/* -->
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="/static/dist/globals.css" />
   </head>
-  <body class="min-h-screen">
+  <body class="h-screen">
     <div id="root"></div>
-    <script type="text/html" src="/static/main.js"></script>
+    <script type="module" src="/static/dist/main.js"></script>
   </body>
 </html>
