--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <title>Sehnya's Portfolio</title>
     <!-- Served by the Bun server as /static/* -> static/dist/* -->
     <link rel="stylesheet" href="/static/dist/globals.css" />
+    <meta
+      name="google-site-verification"
+      content="pZDghSD0o1Zv0D6sh4ORd6h8akeGGQTpdsQJGXjj6Yc"
+    />
   </head>
   <body class="h-screen">
     <div id="root"></div>
